--- a/index.html
+++ b/index.html
@@ -9,9 +9,39 @@
     <h1>RUSHIDHAR REDDY SHEELAM</h1>
     <h4>Government Museum Chennai</h4>
     <p>
-The Government Museum, Chennai, or the Madras Museum, is a museum of human history and culture.
-        It is particularly rich in <b>archaeological and numismatic collection</b>.It has the largest collection of <b>Roman antiquities</b> outside Europe. Among them, the colossal Museum Theatre is one of the most impressive.
+        The Government Museum, Chennai, or the Madras Museum, is a museum of human history and culture.
+        It is particularly rich in <b>archaeological and numismatic collection</b>.It has the largest collection of
+        <b>Roman antiquities</b> outside Europe. Among them, the colossal Museum Theatre is one of the most impressive.
     </p>
+    <hr>
+    </hr>
+    <h5>Chennai Airport to Government Museum Chennai</h5>
+    <ol>
+        <li>coming out from the channai airport Head northeast on Service Rd toward Airport Rd.</li>
+        <li>Slight left onto Chennai - Nagapattinam Hwy/Chennai - Theni Hwy/Chennai - Trichy Hwy/Grand Southern Trunk Rd</li>
+        <li>Use the left 2 lanes to turn slightly left to merge onto Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy</li>
+        <li>Continue straight onto Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd</li>
+        <li>Keep left to stay on Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd
+        <ol>
+        <li>Use the left 3 lanes to turn slightly left to stay on Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd</li>
+        <li>Continue straight past Tamil Nadu Forest Dept to stay on Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd</li>
+        <li>Turn left onto Greams Rd</li>
+        <li>Turn right onto College Bridge</li>
+        <li>Continue onto Pantheon Rd upto 480m our destination will be on left side.</li>
+        
+    </ol>
+</li>
+</ol>
+<ul>
+    <li>arina Beach</li>
+    <li>Guindy National Park</li>
+    <li>Ashtalakshmi Temple</li>
+</ul>
+
+<a href="aboutme.html">click here to open about me page</a>
+
+
+
 </body>
 
 </html>
