added table data

--- a/index.html
+++ b/index.html
@@ -18,27 +18,67 @@
     <h5>Chennai Airport to Government Museum Chennai</h5>
     <ol>
         <li>coming out from the channai airport Head northeast on Service Rd toward Airport Rd.</li>
-        <li>Slight left onto Chennai - Nagapattinam Hwy/Chennai - Theni Hwy/Chennai - Trichy Hwy/Grand Southern Trunk Rd</li>
-        <li>Use the left 2 lanes to turn slightly left to merge onto Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy</li>
+        <li>Slight left onto Chennai - Nagapattinam Hwy/Chennai - Theni Hwy/Chennai - Trichy Hwy/Grand Southern Trunk Rd
+        </li>
+        <li>Use the left 2 lanes to turn slightly left to merge onto Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy
+        </li>
         <li>Continue straight onto Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd</li>
         <li>Keep left to stay on Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd
-        <ol>
-        <li>Use the left 3 lanes to turn slightly left to stay on Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd</li>
-        <li>Continue straight past Tamil Nadu Forest Dept to stay on Anna Salai/Chennai - Nagapattinam Hwy/Chennai - Trichy Hwy/Mount Rd</li>
-        <li>Turn left onto Greams Rd</li>
-        <li>Turn right onto College Bridge</li>
-        <li>Continue onto Pantheon Rd upto 480m our destination will be on left side.</li>
-        
-    </ol>
-</li>
-</ol>
-<ul>
-    <li>arina Beach</li>
-    <li>Guindy National Park</li>
-    <li>Ashtalakshmi Temple</li>
-</ul>
+            <ol>
+                <li>Use the left 3 lanes to turn slightly left to stay on Anna Salai/Chennai - Nagapattinam Hwy/Chennai
+                    - Trichy Hwy/Mount Rd</li>
+                <li>Continue straight past Tamil Nadu Forest Dept to stay on Anna Salai/Chennai - Nagapattinam
+                    Hwy/Chennai - Trichy Hwy/Mount Rd</li>
+                <li>Turn left onto Greams Rd</li>
+                <li>Turn right onto College Bridge</li>
+                <li>Continue onto Pantheon Rd upto 480m our destination will be on left side.</li>
 
-<a href="aboutme.html">click here to open about me page</a>
+            </ol>
+        </li>
+    </ol>
+    <ul>
+        <li>arina Beach</li>
+        <li>Guindy National Park</li>
+        <li>Ashtalakshmi Temple</li>
+    </ul>
+
+    <a href="aboutme.html">click here to open about me page</a>
+
+    <hr>
+    </hr>
+    <h3>4 Cities to visit in India</h3>
+    <p>
+        The table shows 4 cities to visit in India.The first column contains the city name,the second column contains
+        a place to visit and the third column contains time to spend at the place.
+    </p>
+    <table>
+        <tr>
+            <th>City Name</th>
+            <th>Location</th>
+            <th>Time to Spend</th>
+        </tr>
+        <tr>
+            <td>MULUGU</td>
+            <td>RAMAPPA TEMPLE</td>
+            <td>3 HRS</td>
+        </tr>
+        <tr>
+            <td>NALGONDA</td>
+            <td>NAGARJUNASAGAR</td>
+            <td>3 HRS</td>
+        </tr>
+        <tr>
+            <td>KOTHAGUDEM</td>
+            <td>BHADRACHALAM</td>
+            <td>5 HRS</td>
+        </tr>
+        <tr>
+            <td>HYDERABAD</td>
+            <td>RAMOJI FILM CITY</td>
+            <td>8 HRS</td>
+        </tr>
+
+    </table>
 
 
 
