added code fencing

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
         </tr>
 
     </table>
+    <hr>
+    </hr>
+    <h3>
+        Code Fencing
+    </h3>
+    <blockquote>
+        Compare HTML and HTML5
+    </blockquote>
+    <a href="https://stackoverflow.com/questions/18164603/compare-html-and-html5">click here to open stack overflow</a>
+    <code>
+    <pre>
+        &lt;form method="post" action="upload.php" enctype="multipart/form-data"&gt;
+        &lt;input name='uploads[]' type="file" multiple&gt;
+        &lt;input type="submit" value="Send"&gt;
+        &lt;/form&gt;
+    </pre>
+    </code>
 
 
 
