added code fencing

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
         &lt;/form&gt;
     </pre>
     </code>
-
-
+    <a href = "https://css-tricks.com/snippets/html/multiple-file-input/">CSS Tricks</a>
 
 </body>
 
